Fixed the alignments and some parts of the css

--- a/packages/sarai-layout/client/includes/main-header/index.less
+++ b/packages/sarai-layout/client/includes/main-header/index.less
@@ -6,25 +6,59 @@
 	background-color: #396834;
 }
 
-.my-header {
-  justify-content: flex-end !important;
+#my-header{
+	background-color: rgba(255,255,255,0.5);
 }
 
 .navClass {
 	height: 100px;
+	background-color: rgba(255,255,255,0.5);
 }
 
 #home-link, #about-us-link, #explore-link, #planning-dates-link, #dss-link, #get-involved-link, #sublinkclass {
 	color: #9C9C9A;
-	font-size: 15px;
+	font-size: 100%;
+	position: relative;
 }
 
 #home-link:hover, #about-us-link:hover, #explore-link:hover, #planning-dates-link:hover, #dss-link:hover, #get-involved-link:hover, #sublinkclass:hover, #home-link:active, #about-us-link:active, #explore-link:active, #planning-dates-link:active, #dss-link:active, #get-involved-link:active, #sublinkclass:active {
 	color: #59B060;
-	font-size: 15px;
+	font-size: 100%;
 	cursor: pointer;
 	-webkit-transition: color 1s ease-out;
 	-moz-transition: color 1s ease-out;
 	-o-transition: color 1s ease-out;
 	transition: color 1s ease-out;
+}
+#home-link:after, #about-us-link:after, #explore-link:after, #planning-dates-link:after, #dss-link:after, #get-involved-link:after {
+  display: block;
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  width: 0;
+  height: 4px;
+  background-color: #59B060;
+  content: "";
+  transition: width 0.2s;
+}
+#home-link:hover:after, #about-us-link:hover:after, #explore-link:hover:after, #planning-dates-link:hover:after, #dss-link:hover:after, #get-involved-link:hover:after {
+  width: 100%;
+}
+
+#versionbutton{
+	background-color: #F2AF13; 
+	color: #484848;
+	font-size: 15px;
+	height: 50px;
+	width: 175px;
+}
+
+#versionbutton:hover, #versionbutton:active{
+	background-color: #2A2A2A;
+	color: white;
+	cursor: pointer;
+	-webkit-transition: color 2s ease-out;
+	-moz-transition: color 2s ease-out;
+	-o-transition: color 2s ease-out;
+	transition: color 2s ease-out;
 }
