--- a/packages/sarai-main/client/components/sarai-home/includes/blog-list/blog-list.less
+++ b/packages/sarai-main/client/components/sarai-home/includes/blog-list/blog-list.less
@@ -1,6 +1,6 @@
 .blog-image {
-	width: 98%;
-	height: 60%;
+	width: 100%;
+	height: auto;
 }
 
 a {
@@ -10,7 +10,9 @@ a {
 }
 
 .blogsection {
-	height: 400px;
+	border: 1px solid transparent;
+	background-color: #EFEDED;
+	height: 70%;
 }
 
 .titleblog {
