--- a/packages/sarai-main/client/components/sarai-home/includes/crop-list/crop-list.less
+++ b/packages/sarai-main/client/components/sarai-home/includes/crop-list/crop-list.less
@@ -4,3 +4,15 @@
 	color: #696968;
 	text-weight: bold;
 }
+
+#crop-list-id {
+	margin: 2% 8% 2% 8%;
+}
+
+#crop-images-id {
+	width: 60%;
+	height: auto;
+	display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
