--- a/packages/sarai-main/client/components/sarai-home/includes/reports/reports.less
+++ b/packages/sarai-main/client/components/sarai-home/includes/reports/reports.less
@@ -10,7 +10,7 @@
 }
 
 .reportsection {
-	height: 500px;
+	height: 70%;
 }
 
 .material-icons {
